--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22)
-project(cubemap)
+project(viewer)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -8,9 +8,10 @@ add_compile_options(-O3 -ffast-math)
 
 add_link_options(
     -O3 -ffast-math
-    -sEXPORTED_FUNCTIONS=_malloc,_free,_jsCubeMap,_viewerQuery
+    -sEXPORTED_FUNCTIONS=_malloc,_free,_viewerQuery
     -sSINGLE_FILE -sALLOW_MEMORY_GROWTH
+    -sMODULARIZE
+    -sEXPORT_NAME=wasmViewer
 )
-
 
 add_executable(viewer main.cpp)
